--- a/Day 13/NoteBook13.ipynb
+++ b/Day 13/NoteBook13.ipynb
@@ -395,7 +395,7 @@
       "hello dear\n",
       "hello dear\n",
       "hello dear\n",
-      "hello dear\n"
+      "continue......"
      ]
     }
    ],
